--- a/kenburns.css
+++ b/kenburns.css
@@ -54,6 +54,9 @@ body {
 #image-wrap img.visible,
 #image-wrap img.fade-out {
   opacity: 1;
+}
+body.slideshow-running img.fade-out,
+body.slideshow-running img.visible {
   animation: kenburnsmove var(--slide-duration) linear infinite;
   -webkit-animation: kenburnsmove var(--slide-duration) linear infinite;
   -moz-animation: kenburnsmove var(--slide-duration) linear infinite;
@@ -63,23 +66,6 @@ body {
 }
 #image-wrap img.visible {
   z-index: 999;
-}
-
-@-webkit-keyframes kenburnsmove {
-  0% {
-    -webkit-transform-origin: var(--vertical-position)
-      var(--horizontal-position);
-    -moz-transform-origin: var(--vertical-position) var(--horizontal-position);
-    transform-origin: var(--vertical-position) var(--horizontal-position);
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-  }
-  100% {
-    transform: scale(var(--scale-max));
-    -webkit-transform: scale(var(--scale-max));
-    -moz-transform: scale(var(--scale-max));
-  }
 }
 
 #slideshow-config {
@@ -143,16 +129,101 @@ body.slideshow-running #start-slideshow {
 body.show-config #slideshow-config {
   display: grid;
 }
-#black-white-filter {
+#black-white-filter,
+#autplay-hint {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
-  backdrop-filter: brightness(1.02) contrast(1.05) grayscale(1);
   display: none;
 }
-body.with-black-and-white-filter #black-white-filter {
+#black-white-filter {
+  opacity: 0;
+  transition: opacity 0.5s;
   display: block;
+}
+body.with-black-and-white-filter #black-white-filter {
+  opacity: 1;
+  z-index: 1000;
+}
+
+h1 {
+  font-size: 1.2rem;
+  padding: 0;
+  margin: 0;
+}
+h2 {
+  font-size: 0.7rem;
+  padding: 0;
+  margin: 0;
+}
+h2 a {
+  opacity: 0.5;
+  color: black;
+  text-decoration: none;
+}
+#audio-music {
+  display: block;
+  padding-top: 1rem;
+}
+#progress-bar {
+  position: fixed;
+  bottom: 1rem;
+  width: calc(100% - 2rem);
+  left: 1rem;
+  height: 0.5rem;
+  z-index: 2000;
+  opacity: 0.5;
+}
+#progress-bar .progress {
+  background: #fff;
+  height: 100%;
+  border-radius: 2px;
+  transition: width 0.5s;
+}
+body:not(.autoplay) #progress-bar,
+#progress-bar.invisible {
+  display: none;
+}
+
+body.autoplay:not(.slideshow-running) #autplay-hint {
+  display: grid;
+  place-content: center;
+}
+body.autoplay:not(.slideshow-running) #image-wrap img:not(.loaded) {
+  display: none;
+}
+#autplay-hint p {
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  margin: 0;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+  box-shadow: 0px 0px 50px rgb(0 0 0 / 20%);
+}
+#autplay-hint p:after {
+  display: block;
+  content: "Loading pictures… Please wait";
+}
+body.autoplay.ready #autplay-hint p:after {
+  display: block;
+  content: "Click to start slideshow";
+}
+@-webkit-keyframes kenburnsmove {
+  0% {
+    -webkit-transform-origin: var(--vertical-position)
+      var(--horizontal-position);
+    -moz-transform-origin: var(--vertical-position) var(--horizontal-position);
+    transform-origin: var(--vertical-position) var(--horizontal-position);
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+  }
+  100% {
+    transform: scale(var(--scale-max));
+    -webkit-transform: scale(var(--scale-max));
+    -moz-transform: scale(var(--scale-max));
+  }
 }
